# vscode-prelude

./: .gitignore  .pdm.toml  README.md  pyproject.toml
src/vscode_prelude/: __init__.py  __main__.py  prelude.py
