[project]
name = "vscode-prelude"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Kyllo", email = "alex.kyllo@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[tool.pdm.scripts]
vscode-prelude = {call = "vscode_prelude:main"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
